feat: 고객페이지 정렬 추가

--- a/src/main/resources/templates/realEstate.html
+++ b/src/main/resources/templates/realEstate.html
@@ -33,6 +33,10 @@
                                         <div class="col-12 col-md-auto">
                                             <button class="btn btn-dark btn-sm w-100" id="searchButton" type="button">검색</button>
                                         </div>
+
+                                        <div class="col-12 col-md-auto">
+                                            <button class="btn btn-primary btn-sm w-100" id="sortSaleDateButton" type="button">매각기일</button>
+                                        </div>
                                     </div>
                                 </div>
 
