--- a/src/main/resources/templates/realEstate.html
+++ b/src/main/resources/templates/realEstate.html
@@ -33,10 +33,13 @@
                                         <div class="col-12 col-md-auto">
                                             <button class="btn btn-dark btn-sm w-100" id="searchButton" type="button">검색</button>
                                         </div>
-
                                         <div class="col-12 col-md-auto">
-                                            <button class="btn btn-primary btn-sm w-100" id="sortSaleDateButton" type="button">매각기일</button>
+                                            <button class="btn btn-primary btn-sm w-100" id="sortCreateDateButton" type="button">등록일순</button>
                                         </div>
+                                        <div class="col-12 col-md-auto">
+                                            <button class="btn btn-success btn-sm w-100" id="sortSaleDateButton" type="button">매각기일순</button>
+                                        </div>
+
                                     </div>
                                 </div>
 
