--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -125,16 +125,16 @@
                                 <label for="addProductMinPrice">최저가:</label>
                                 <input type="text" class="form-control mb-3 number-input" id="addProductMinPrice">
 
-                                <label for="addProductExpectedPrice">예상 낙찰가:</label>
+                                <label for="addProductExpectedPrice">예상가:</label>
                                 <input type="text" class="form-control mb-3 number-input" id="addProductExpectedPrice">
 
                                 <label for="addProductSaleDate">매각 기일:</label>
                                 <input type="date" class="form-control mb-3" id="addProductSaleDate">
 
-                                <label for="addProductManagerName">담당자:</label>
+                                <label for="addProductManagerName">권리분석사:</label>
                                 <input type="text" class="form-control mb-3" id="addProductManagerName">
 
-                                <label for="addProductManagerPhone">담당자 연락처:</label>
+                                <label for="addProductManagerPhone">상담전화:</label>
                                 <input type="text" class="form-control mb-3" id="addProductManagerPhone">
 
                                 <label for="addProductDescription">특이사항:</label>
@@ -210,16 +210,16 @@
                                     <label for="updateProductMinPrice">최저가:</label>
                                     <input type="text" class="form-control mb-3 number-input" id="updateProductMinPrice">
 
-                                    <label for="updateProductExpectedPrice">예상 낙찰가:</label>
+                                    <label for="updateProductExpectedPrice">예상가:</label>
                                     <input type="text" class="form-control mb-3 number-input" id="updateProductExpectedPrice">
 
                                     <label for="updateProductSaleDate">매각 기일:</label>
                                     <input type="date" class="form-control mb-3" id="updateProductSaleDate">
 
-                                    <label for="updateProductManagerName">담당자:</label>
+                                    <label for="updateProductManagerName">권리분석사:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductManagerName">
 
-                                    <label for="updateProductManagerPhone">담당자 연락처:</label>
+                                    <label for="updateProductManagerPhone">상담전화:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductManagerPhone">
 
                                     <label for="updateProductDescription">특이사항:</label>
