--- a/src/main/resources/templates/realEstate.html
+++ b/src/main/resources/templates/realEstate.html
@@ -10,6 +10,11 @@
         <link rel="stylesheet" th:href="@{/css/styles.css}">
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <style>
+            .info-item {
+                margin-bottom: 7px; /* 항목 간 간격 */
+            }
+        </style>
     </head>
     <body class="bg-primary">
         <div id="layoutAuthentication">
