--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <nav th:fragment="header" class="sb-topnav navbar navbar-expand navbar-light  bg-light">
     <!-- Navbar Brand-->
     <a class="navbar-brand " href="/product">
-        <div style="text-align: center">매물다오</div>
+        <div style="text-align: center">엘 바이올린</div>
     </a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
