--- a/src/main/resources/templates/interview.html
+++ b/src/main/resources/templates/interview.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>엘 바이올린 - 채험레슨 예약접수</title>
+        <title>엘 바이올린 - 면접 예약접수</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -46,24 +46,12 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    채험레슨 예약접수
+                                    면접 예약접수
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-body" >
                                     <form id="liveBlogRankForm">
-                                        <label for="studentName">수강생 명:</label>
-                                        <div class="form-floating mb-3">
-                                            <input class="form-control" id="studentName" type="text" placeholder="매장명 예) 올어바웃로컬 (최대 1개)" required="">
-                                            <label for="studentName">수강생 이름을 입력해주세요.</label>
-                                        </div>
-
-                                        <label for="studentPhone">수강생 연락처:</label>
-                                        <div class="form-floating mb-3">
-                                            <input class="form-control" id="studentPhone" type="text" placeholder="메인 키워드 예) OOO맛집 (최대 1개)" required="">
-                                            <label for="studentPhone">수강생 연락처를 "-" 없이 입력해주세요.</label>
-                                        </div>
-
                                         <label for="teacherName">선생님 명:</label>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="teacherName" type="text" placeholder="메인 키워드 예) OOO맛집 (최대 1개)" required="">
@@ -76,18 +64,11 @@
                                             <label for="teacherPhone">선생님 연락처를 "-" 없이 입력해주세요.</label>
                                         </div>
 
-                                        <label for="reservationDate">체험 일시:</label>
+                                        <label for="reservationDate">면접 일시:</label>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="reservationDate" type="datetime-local">
                                             <label for="reservationDate">체험 날짜를 선택해주세요.</label>
                                         </div>
-
-                                        <label for="studentInfo">수강생 정보:</label>
-                                        <div class="form-floating mb-3">
-                                            <textarea class="form-control" id="studentInfo" style="height: 300px; resize: none">
-                                            </textarea>
-                                        </div>
-
                                         <div class="" style="display: flex; justify-content: center;">
                                             <button class="btn btn-primary" id="reservationButton" type="button">예약하기</button>
                                         </div>
@@ -107,6 +88,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-        <script th:src="@{/js/view/reservation/reservation.js}"></script>
+        <script th:src="@{/js/view/interview/interview.js}"></script>
     </body>
 </html>
