feat: 1차 피드백 반영

--- a/src/main/resources/templates/interviewList.html
+++ b/src/main/resources/templates/interviewList.html
@@ -51,6 +51,7 @@
                             </div>
                             <div class="card m-3 ">
                                 <div class="form-group d-flex align-items-center gap-2 mx-3">
+                                    <input type="date" class="form-control form-control-sm w-auto" id="searchDate">
                                     <select class="form-select form-select-sm w-auto" id="categorySelect" required>
                                         <option value="">카테고리 선택</option>
                                     </select>
@@ -240,7 +241,6 @@
                         </div>
                     </div>
                 </div>
-                <th:block th:replace="fragments/footer :: footer"></th:block>
             </div>
 
         </div>
