--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -5,9 +5,9 @@
 
         </div>
 
-        <div class="sb-sidenav-footer">
-            <div class="small">개발자:</div>
-            POINTMAN
-        </div>
+<!--        <div class="sb-sidenav-footer">-->
+<!--            <div class="small">개발자:</div>-->
+<!--            POINTMAN-->
+<!--        </div>-->
     </nav>
 </div>
