--- a/src/main/resources/templates/interview.html
+++ b/src/main/resources/templates/interview.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>엘 바이올린 - 면접 예약접수</title>
+        <title>엘 바이올린 - 면접 예약</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -46,7 +46,7 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    면접 예약접수
+                                    면접 예약
                                 </div>
                             </div>
                             <div class="card">
@@ -72,7 +72,7 @@
 
                                         <label for="zoomUrl">Zoom 주소:</label>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="zoomUrl" type="text">
+                                            <input class="form-control" id="zoomUrl" type="text" value="https://url.kr/p8s8wt">
                                             <label for="zoomUrl">줌 주소를 입력해주세요. 예) https://url.kr/p8s8wt </label>
                                         </div>
                                         <div class="" style="display: flex; justify-content: center;">
@@ -87,7 +87,6 @@
                 <div id="loadingOverlay">
                     <img src="/loading.gif" alt="로딩 중...">
                 </div>
-                <th:block th:replace="fragments/footer :: footer"></th:block>
             </div>
 
         </div>
