--- a/src/main/resources/templates/member.html
+++ b/src/main/resources/templates/member.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>매물다오-회원관리</title>
+        <title>엘 바이올린-회원관리</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -145,7 +145,6 @@
                         </div>
                     </div>
                 </div>
-                <th:block th:replace="fragments/footer :: footer"></th:block>
             </div>
 
         </div>
