--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>엘 바이올린 - 채험레슨 예약접수</title>
+        <title>엘 바이올린 - 채험레슨 예약</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -46,7 +46,7 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    채험레슨 예약접수
+                                    채험레슨 예약
                                 </div>
                             </div>
                             <div class="card">
@@ -100,7 +100,6 @@
                 <div id="loadingOverlay">
                     <img src="/loading.gif" alt="로딩 중...">
                 </div>
-                <th:block th:replace="fragments/footer :: footer"></th:block>
             </div>
 
         </div>
