--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>엘 바이올린 - 채험레슨 예약</title>
+        <title>엘 바이올린 - 체험레슨 예약</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -33,6 +33,7 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
             }
+
         </style>
     </head>
     <body class="sb-nav-fixed">
@@ -46,7 +47,7 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    채험레슨 예약
+                                    체험레슨 예약
                                 </div>
                             </div>
                             <div class="card">
@@ -84,8 +85,7 @@
 
                                         <label for="studentInfo">수강생 정보:</label>
                                         <div class="form-floating mb-3">
-                                            <textarea class="form-control" id="studentInfo" style="height: 300px; resize: none">
-                                            </textarea>
+                                            <textarea class="form-control" id="studentInfo" style="height: 200px; resize: none"></textarea>
                                         </div>
 
                                         <div class="" style="display: flex; justify-content: center;">
