--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,8 @@
 <nav th:fragment="header" class="sb-topnav navbar navbar-expand navbar-light  bg-light">
     <!-- Navbar Brand-->
     <a class="navbar-brand " href="/reservation">
-        <div style="text-align: center">엘 바이올린</div>
+<!--        <div style="text-align: center">엘 바이올린</div>-->
+        <img src="/logo.png" class="img-fluid" style="height: 57.5px; margin: 0; padding: 0;">
     </a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
