--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -10,7 +10,9 @@
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <script th:src="@{/js/scripts.js}"></script>
         <script th:src="@{/js/view/common/common.js}"></script>
         <script th:src="@{/js/view/fragments/header.js}"></script>
@@ -79,7 +81,7 @@
 
                                         <label for="reservationDate">체험 일시:</label>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="reservationDate" type="datetime-local">
+                                            <input class="form-control" type="text" id="reservationDate">
                                             <label for="reservationDate">체험 날짜를 선택해주세요.</label>
                                         </div>
 
@@ -103,6 +105,26 @@
             </div>
 
         </div>
+        <script>
+            flatpickr("#reservationDate", {
+                enableTime: true, // 시간 선택 활성화
+                noCalendar: false, // 캘린더 활성화
+                dateFormat: "Y년 m월 d일 K h:i", // 날짜 & 시간 포맷 (오전/오후)
+                time_24hr: false, // 12시간제 (오전/오후) 사용
+                minuteIncrement: 5, // 5분 단위 선택
+                locale: {
+                    weekdays: {
+                        shorthand: ["일", "월", "화", "수", "목", "금", "토"],
+                        longhand: ["일요일", "월요일", "화요일", "수요일", "목요일", "금요일", "토요일"]
+                    },
+                    months: {
+                        shorthand: ["1월", "2월", "3월", "4월", "5월", "6월", "7월", "8월", "9월", "10월", "11월", "12월"],
+                        longhand: ["1월", "2월", "3월", "4월", "5월", "6월", "7월", "8월", "9월", "10월", "11월", "12월"]
+                    },
+                    amPM: ["오전", "오후"], // 오전/오후 표시
+                }
+            });
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
