--- a/src/main/resources/templates/roomTourReservationList.html
+++ b/src/main/resources/templates/roomTourReservationList.html
@@ -46,7 +46,7 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    체험레슨 예약내역
+                                    룸투어 신청내역
                                 </div>
                             </div>
                             <div class="card m-3 ">
